@@ -5,6 +5,7 @@ ctools 6.x-1.x-dev
 Fix problem with ctools_set_page_token()
 Add a couple of support functions for ctools_set_page_token that are meant to be used by themes.
 #563916 by Damien Tournoud: ajax before() operation not using behaviors correctly.
+#553112: dependent.js failed to set proper initial state if inside an already hidden element.
 
 ctools 6.x-1.0
 ==============
